axum-macros/tests/from_request/fail/derive_opt_out_debug_and_display_without_error.rs
use axum_macros::FromRequest;

#[derive(FromRequest)]
#[from_request(rejection_derive(!Debug, !Display))]
struct Extractor {
    body: String,
}

fn main() {}
